--- a/.github/workflows/publish_locally.yaml
+++ b/.github/workflows/publish_locally.yaml
@@ -147,7 +147,8 @@ jobs:
     
     - name: Test with pytest
       run: |
-        pytest -s
+        command="pytest -s"
+        sudo docker run -v $(pwd):/mnt -w /mnt/ fedora:34 /bin/bash -c $command
 
     - name: building the package
       run: |
