--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -146,8 +146,8 @@ jobs:
     
     - name: Test with pytest
       run: |
-        command="pytest -s"
-        sudo docker run -v $(pwd):/mnt -w /mnt/ fedora:34 /bin/bash -c $command
+        command="pip install pytest;pip install -r requirements.txt;ls;pytest -s"
+          sudo docker run -v $(pwd):/mnt -w /mnt/ python:${{matrix.python-version}} /bin/bash -c $command
 
     - name: building the package
       run: |
