--- a/.github/workflows/publish_locally.yaml
+++ b/.github/workflows/publish_locally.yaml
@@ -147,8 +147,8 @@ jobs:
     
     - name: Test with pytest
       run: |
-        command="pip install pytest;pip install -r requirements.txt;ls;pytest -s"
-          sudo docker run -v $(pwd):/mnt -w /mnt/ python:${{matrix.python-version}} /bin/bash -c $command
+        command="pip install --upgrade pip;pip install pytest;pip install -r requirements.txt;ls;pytest -s"
+        sudo docker run -v $(pwd):/mnt -w /mnt/ python:${{matrix.python-version}} /bin/bash -c "$command"
 
     - name: building the package
       run: |
