--- a/.github/workflows/run_unit_tests.yaml
+++ b/.github/workflows/run_unit_tests.yaml
@@ -18,6 +18,7 @@ env:
   MATRIX_VERSION_PUBLISHING: "3.10"
   MAX_TAG_AGE: "1 hour"
   SOURCE_CODE_PATH: asciimatics_overlay_ov/asciimatics_overlay_main.py
+  SOURCE_CODE_REQUIREMENTS_PATH: asciimatics_overlay_ov/requirements.txt
 
 jobs:
 
@@ -173,5 +174,5 @@ jobs:
 
       - name: Test with pytest
         run: |
-          command="pip install --upgrade pip;pip install pytest;pip install -r requirements.txt;ls;pytest -s"
+          command="pip install --upgrade pip;pip install pytest;pip install -r ${{env.SOURCE_CODE_REQUIREMENTS_PATH}};ls;pytest -s"
           sudo docker run -v $(pwd):/mnt -w /mnt/ python:${{matrix.python-version}} /bin/bash -c "$command"
