--- a/.github/workflows/publish_locally.yaml
+++ b/.github/workflows/publish_locally.yaml
@@ -146,10 +146,10 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
-    - name: Test with pytest
-      run: |
-        command="pip install --upgrade pip;pip install pytest;pip install -r ${{env.SOURCE_CODE_REQUIREMENTS_PATH}};pytest -s"
-        sudo docker run -v $(pwd):/mnt -w /mnt/ python:${{matrix.python-version}} /bin/bash -c "$command"
+    # - name: Test with pytest
+    #   run: |
+    #     command="pip install --upgrade pip;pip install pytest;pip install -r ${{env.SOURCE_CODE_REQUIREMENTS_PATH}};pytest -s"
+    #     sudo docker run -v $(pwd):/mnt -w /mnt/ python:${{matrix.python-version}} /bin/bash -c "$command"
 
     - name: building the package
       run: |
