--- a/.github/workflows/run_unit_tests.yaml
+++ b/.github/workflows/run_unit_tests.yaml
@@ -145,19 +145,19 @@ jobs:
 
     - name: Install xvfb
       run: sudo apt-get install xvfb
-
-    # - name: install venv
-    #   run: sudo apt-get install python${{matrix.python-version}}-venv -y
     
     - name: Install dependencies
       run: |
         cd ${{env.CWD}}
-        python -m venv lenv
-        . ./lenv/bin/activate
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         lib_packages=$(find ./*/ -name "requirements.txt" -type f)
         first_requirement=$(echo $lib_packages | cut -d " " -f 1)
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ ${#first_requirements} -gt 0 ]; then pip install -r $first_requirements; fi
+        python -m venv lenv
+        . ./lenv/bin/activate
+        python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ ${#first_requirements} -gt 0 ]; then pip install -r $first_requirements; fi
         deactivate
@@ -165,12 +165,10 @@ jobs:
     - name: Lint with flake8
       run: |
         cd ${{env.CWD}}
-        . ./lenv/bin/activate
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        deactivate
         
     - name: building the package
       run: |
@@ -191,11 +189,13 @@ jobs:
     - name: Installing the package
       run: |
         cd ${{env.CWD}}
-        . ./lenv/bin/activate
         PIP_PACKAGE="$(find . -name "*.tar.gz" -type f | cut -d " " -f 1)"
         echo -e "\n\n\n\n\n\n\n"
         echo "Package found: $PIP_PACKAGE"
         echo -e "\n\n\n\n\n\n\n"
+        pip install "$PIP_PACKAGE"
+        . ./lenv/bin/activate
+        echo "PIP PACKAGE = $PIP_PACKAGE"
         pip install "$PIP_PACKAGE"
         deactivate
 
