--- a/.github/workflows/run_unit_tests.yaml
+++ b/.github/workflows/run_unit_tests.yaml
@@ -216,7 +216,7 @@ jobs:
     - name: Test with pytest
       run: |
         cd ${{env.CWD}}
-        docker run -t -v "$(pwd)":"/home" ubuntu /bin/bash -c "
+        docker run -t -e DEBIAN_FRONTEND=noninteractive -v "$(pwd)":"/home" ubuntu /bin/bash -c "
           apt update ; apt upgrade -y && \
           apt install -y xvfb software-properties-common && \
           add-apt-repository -y ppa:deadsnakes/ppa && \
