--- a/.github/workflows/run_unit_tests.yaml
+++ b/.github/workflows/run_unit_tests.yaml
@@ -221,7 +221,7 @@ jobs:
           apt install -y xvfb software-properties-common && \
           add-apt-repository -y ppa:deadsnakes/ppa && \
           apt-get update && \
-          apt install -y python${{matrix.python-version}} python${{matrix.python-version}}-venv python${{matrix.python-version}}-dev && \
+          apt install -y python${{matrix.python-version}} python${{matrix.python-version}}-venv python${{matrix.python-version}}-dev python${{matrix.python-version}}-pip && \
           cd /home && \
           . ./lenv/bin/activate && \
           pip3 install -r requirements.txt && \
