--- a/.github/workflows/run_unit_tests.yaml
+++ b/.github/workflows/run_unit_tests.yaml
@@ -221,7 +221,7 @@ jobs:
           apt install -y xvfb software-properties-common && \
           add-apt-repository -y ppa:deadsnakes/ppa && \
           apt-get update && \
-          apt install -y python${{matrix.python-version}} python${{matrix.python-version}}-venv python${{matrix.python-version}}-dev python3-pip && \
+          apt install -y python${{matrix.python-version}} python${{matrix.python-version}}-venv python3-pip && \
           cd /home && \
           . ./lenv/bin/activate && \
           pip3 install -r requirements.txt && \
@@ -229,5 +229,3 @@ jobs:
           deactivate
         "
         # xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" pytest -s
-
-# docker run -t -e DEBIAN_FRONTEND=noninteractive -v %cd%:"/home" ubuntu /bin/bash -c "apt update ; apt upgrade -y && apt install -y xvfb software-properties-common && add-apt-repository -y ppa:deadsnakes/ppa && apt-get update && apt install -y python3.10 python3.10-venv python3.10-dev python3-pip && cd /home && . ./lenv/bin/activate && pip3 install -r requirements.txt && xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' pytest -s && deactivate"
