--- a/.github/workflows/run_unit_tests.yaml
+++ b/.github/workflows/run_unit_tests.yaml
@@ -216,18 +216,27 @@ jobs:
     - name: Test with pytest
       run: |
         cd ${{env.CWD}}
-        docker run -t -e DEBIAN_FRONTEND=noninteractive -v "$(pwd)":"/home" ubuntu /bin/bash -c "
-          apt update ; apt upgrade -y && \
+        docker run -it -e DEBIAN_FRONTEND=noninteractive -v "$(pwd)":"/home" ubuntu /bin/bash -c "
+          echo "Upating ubuntu version" && \
+          apt update && apt upgrade -y && \
+          echo "Installing required dependencies" && \
           apt install -y xvfb software-properties-common && \
+          echo "Adding python deadsnakes repository" && \
           add-apt-repository -y ppa:deadsnakes/ppa && \
           apt-get update && \
+          echo "Installing required python versions (${{matrix.python-version}})" && \
           apt install -y python${{matrix.python-version}} python${{matrix.python-version}}-venv python3-pip python${{matrix.python-version}}-dev && \
+          echo "Setting the installed python version as the default version" && \
+          update-alternatives --install /usr/bin/python3 python3 /usr/bin/python${{matrix.python-version}} 1 && \
+          update-alternatives --install /usr/bin/python python /usr/bin/python${{matrix.python-version}} 1 && \
+          echo "Entering the folder containing the code" && \
           cd /home && \
+          echo "Activating the virtual environment" && \
           . ./lenv/bin/activate && \
+          echo "Installing requirements" && \
           pip3 install -r requirements.txt  --break-system-packages && \
+          echo "Running the tests" && \
           xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' pytest -s && \
+          echo "Deactivating the virtual environment" && \
           deactivate
         "
-        # xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" pytest -s
-
-# docker run -t -e DEBIAN_FRONTEND=noninteractive -v %cd%:"/home" ubuntu /bin/bash -c "apt update ; apt upgrade -y && apt install -y xvfb software-properties-common && add-apt-repository -y ppa:deadsnakes/ppa && apt-get update && apt install -y python3.10 python3.10-venv python3-pip python3.10-dev && cd /home && . ./lenv/bin/activate && pip3 install -r requirements.txt && xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' pytest -s && deactivate"
