--- a/.github/workflows/run_unit_tests.yaml
+++ b/.github/workflows/run_unit_tests.yaml
@@ -224,19 +224,19 @@ jobs:
           echo "Adding python deadsnakes repository" && \
           add-apt-repository -y ppa:deadsnakes/ppa && \
           apt-get update && \
-          echo "Installing required python versions (${{matrix.python-version}})" && \
+          echo 'Installing required python versions (${{matrix.python-version}})' && \
           apt install -y python${{matrix.python-version}} python${{matrix.python-version}}-venv python3-pip python${{matrix.python-version}}-dev && \
-          echo "Setting the installed python version as the default version" && \
+          echo 'Setting the installed python version as the default version' && \
           update-alternatives --install /usr/bin/python3 python3 /usr/bin/python${{matrix.python-version}} 1 && \
           update-alternatives --install /usr/bin/python python /usr/bin/python${{matrix.python-version}} 1 && \
-          echo "Entering the folder containing the code" && \
+          echo 'Entering the folder containing the code' && \
           cd /home && \
-          echo "Activating the virtual environment" && \
+          echo 'Activating the virtual environment' && \
           . ./lenv/bin/activate && \
-          echo "Installing requirements" && \
+          echo 'Installing requirements' && \
           pip3 install -r requirements.txt  --break-system-packages && \
-          echo "Running the tests" && \
+          echo 'Running the tests' && \
           xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' pytest -s && \
-          echo "Deactivating the virtual environment" && \
+          echo 'Deactivating the virtual environment' && \
           deactivate
         "
