--- a/.github/workflows/run_unit_tests.yaml
+++ b/.github/workflows/run_unit_tests.yaml
@@ -1,9 +1,10 @@
 name: run_unit_tests
 
-# version: 1.0.1
+# version: 1.0.2
 # Version log:
   # 1.0.0: Initial version
   # 1.0.1: Add the xvfb library to the actions for any graphical environements
+  # 1.0.2: Put the test in a docker container
 
 on:
   push:
@@ -156,19 +157,6 @@ jobs:
         first_requirement=$(echo $lib_packages | cut -d " " -f 1)
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ ${#first_requirements} -gt 0 ]; then pip install -r $first_requirements; fi
-        python -m venv lenv
-        echo "Activating environement"
-        . ./lenv/bin/activate
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ ${#first_requirements} -gt 0 ]; then pip install -r $first_requirements; fi
-        deactivate
-        echo "Deactivating environement"
-
-    - name: Move le environement out of the build folder
-      run: |
-          cd ${{env.CWD}}
-          mv lenv ../lenv
 
     - name: Lint with flake8
       run: |
@@ -194,12 +182,6 @@ jobs:
         pip install build
         python -m build
 
-
-    - name: Move le environement out of the build folder
-      run: |
-        cd ${{env.CWD}}
-        mv ../lenv ./lenv
-    
     - name: Installing the package
       run: |
         cd ${{env.CWD}}
@@ -208,20 +190,18 @@ jobs:
         echo "Package found: $PIP_PACKAGE"
         echo -e "\n\n\n\n\n\n\n"
         pip install "$PIP_PACKAGE"
-        . ./lenv/bin/activate
         echo "PIP PACKAGE = $PIP_PACKAGE"
         pip install "$PIP_PACKAGE"
-        deactivate
 
     - name: Test with pytest
       run: |
         cd ${{env.CWD}}
         docker run -it -e DEBIAN_FRONTEND=noninteractive -v "$(pwd)":"/home" ubuntu /bin/bash -c "
-          echo "Upating ubuntu version" && \
+          echo 'Upating ubuntu version' && \
           apt update && apt upgrade -y && \
-          echo "Installing required dependencies" && \
+          echo 'Installing required dependencies' && \
           apt install -y xvfb software-properties-common && \
-          echo "Adding python deadsnakes repository" && \
+          echo 'Adding python deadsnakes repository' && \
           add-apt-repository -y ppa:deadsnakes/ppa && \
           apt-get update && \
           echo 'Installing required python versions (${{matrix.python-version}})' && \
@@ -231,12 +211,8 @@ jobs:
           update-alternatives --install /usr/bin/python python /usr/bin/python${{matrix.python-version}} 1 && \
           echo 'Entering the folder containing the code' && \
           cd /home && \
-          echo 'Activating the virtual environment' && \
-          . ./lenv/bin/activate && \
           echo 'Installing requirements' && \
           pip3 install -r requirements.txt  --break-system-packages && \
           echo 'Running the tests' && \
-          xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' pytest -s && \
-          echo 'Deactivating the virtual environment' && \
-          deactivate
+          xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' pytest -s
         "
