--- a/.github/workflows/publish_locally.yaml
+++ b/.github/workflows/publish_locally.yaml
@@ -110,9 +110,27 @@ jobs:
     
     - name: Test with pytest
       run: |
-        echo "Tests were run on the local machine due to lack of proper environement in the github actions"
-  #     cd ${{env.CWD}}
-  #     xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" pytest -s
+        cd ${{env.CWD}}
+        docker run -t -e DEBIAN_FRONTEND=noninteractive -v "$(pwd)":"/home" ubuntu /bin/bash -c "
+          echo 'Upating ubuntu version' && \
+          apt update && apt upgrade -y && \
+          echo 'Installing required dependencies' && \
+          apt install -y xvfb software-properties-common && \
+          echo 'Adding python deadsnakes repository' && \
+          add-apt-repository -y ppa:deadsnakes/ppa && \
+          apt-get update && \
+          echo 'Installing required python versions (${{matrix.python-version}})' && \
+          apt install -y python${{matrix.python-version}} python${{matrix.python-version}}-venv python3-pip python${{matrix.python-version}}-dev && \
+          echo 'Setting the installed python version as the default version' && \
+          update-alternatives --install /usr/bin/python3 python3 /usr/bin/python${{matrix.python-version}} 1 && \
+          update-alternatives --install /usr/bin/python python /usr/bin/python${{matrix.python-version}} 1 && \
+          echo 'Entering the folder containing the code' && \
+          cd /home && \
+          echo 'Installing requirements' && \
+          pip3 install -r requirements.txt  --break-system-packages && \
+          echo 'Running the tests' && \
+          pytest -s
+        "
 
     - name: building the package
       run: |
